hphp/hack/test/typecheck/iface_require_incompat6.php.exp
File "iface_require_incompat6.php", line 14, characters 7-8:
Unable to satisfy trait/interface requirement (Typing[4110])
File "iface_require_incompat6.php", line 6, characters 25-29:
This is a float
File "iface_require_incompat6.php", line 13, characters 25-27:
It is incompatible with an int
File "iface_require_incompat6.php", line 6, characters 25-29:
Considering that this type argument is invariant with respect to Super
